--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Quiz</title>
+    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>Quiz</h1>
-    <p>Welcome to Quiz</p>
-  </body>
+    <h1><%= title %></h1>
+    <p>Bienvenido a <%= title %></p>
+    <p><a href="/quizes/question">Comience a jugar</a></p>
+ </body>
 </html>
