Despliegue en Heroku

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,7 +26,7 @@
 	</nav>
 
 	<section class="main" id="s1">
-		<div><%- body %></div>s
+		<div><%- body %></div>
 	</section>
 
 	<footer class="main" id="f1">
