--- a/views/author.ejs
+++ b/views/author.ejs
@@ -5,7 +5,8 @@
 	<link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-	<h2>HOLAAAAA</h2>
+	<h2>Créditos</h2>
 	Autor: <%= autor %> <p>
+	<img src="http://gpscasso.neocities.org/yo.jpg">
 </body>
 </html>
