--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,9 +19,9 @@ body {
 	color: black;
 }
 
-img{
-	width: 100%;
-	height: 100%;
+body img{
+	max-width: 100%;
+	max-height: 100%;
 }
 
 section > div {
