--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,7 +27,7 @@
 	</nav>
 
 	<section class="main" id="s1">
-		<div><%- body %></div>
+		<div id="este"><%- body %></div>
 	</section>
 
 	<footer class="main" id="f1">
