--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,16 @@ body img{
 
 section > div {
 	padding: 20px;
+	max-width: 100%;
+	max-height: 100%;
 }
+
+section #este{
+	padding: 20px;
+	max-width: 100%;
+	max-height: 100%;
+}
+
 
 header, nav, section{
 	background: #eee;
