--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -3,6 +3,7 @@
 	<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 	<% } %>
 </table>
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
 
 <form method="get" action="/quizes?search=texto_a_buscar">
 	 <input type="text" name="search" placeholder="Búsqueda de pregunta"/>
