--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -2,6 +2,7 @@
 	<% var i; for (i=0; i < quizes.length; i++) { %>
 	<tr>
 		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+		<%if(session.user){%>
 		<td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
 		<td>
 			<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
@@ -10,11 +11,15 @@
 				</button>
 			</form>
 		</td>
+		<% } %>
 	</tr>
 	<% } %>
 </table>
+
+<%if(session.user){%>
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
 <form method="get" action="/quizes?search=texto_a_buscar">
 	 <input type="text" name="search" placeholder="Búsqueda de pregunta"/>
 	 <input type="submit" value="Enviar">
  </form>
+ <%}%>
