--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,7 @@
 	<nav class="main" id="h1" role="navigation">
 		<span><a href="/">Inicio</a></span>
 		<span><a href="/quizes">Preguntas</a></span>
+		<span><a href="/quizes/statistics">Estadisticas</a></span>
 		<span><a href="/author">Créditos</a></span>
 	</nav>
 
