--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
 		<%if(!session.user){%>
 			<span class="right"><a href="/login">Login</a></span>
     	<%}else{%>
-      		<span class="right"> <%=session.user.username%> <a href="/logout">Logout</a></span>
+      		<span class="right"> <font style="text-transform: uppercase;"> <%=session.user.username%> </font><a href="/logout">Logout</a></span>
     	<%}%>
 
 		<h2>Quiz:<span> el juego de las preguntas</span></h2>
