--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,21 +1,22 @@
 <table>
   <% var i; for (i=0; i < quizes.length; i++) { %>        
-    <tr>
-      <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+  <tr>
+    <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
       <%if(session.user) {
-         if (session.user.isAdmin || session.user.id === quizes[i].UserId) {%>
-        <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
-        <td>
-          <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
-            <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-              borrar
-            </button>
-          </form>
-        </td>
-        <%}
-      }%>
-    </tr> 
-  <% } %>
+        if (session.user.isAdmin || session.user.id === quizes[i].UserId) {%>
+     <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+     <td>
+      <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
+        <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+          borrar
+        </button>
+      </form>
+    </td>
+    <td><form method="post" action="/user/<%= session.user.id %>/favourites/<%=quizes[i].id%>?_method=put"><button>fav</button></a></td>
+    <%}
+  }%>
+</tr> 
+<% } %>
 </table>
 <p/>
 
