--- a/views/quizes/statistics.ejs
+++ b/views/quizes/statistics.ejs
@@ -6,6 +6,7 @@
     <tr> Número de comentarios: <%=num_com%> </tr> <br>
     <tr>Número medio de comentarios por pregunta: <%=media%> </tr> <br>
     <tr>Número de preguntas con comentarios: <%=preg_con_coment%> </tr> <br>
-    <tr>Número de preguntas sin comentarios: <%=preg_sin_coment%> <br>
+    <tr>Número de preguntas sin comentarios: <%=preg_sin_coment%> </tr> <br>
+    <tr>Número de preguntas favoritas: <%=num_favs%> </tr> <br>
     </center>
 </table>
