--- a/views/quizes/favourites.ejs
+++ b/views/quizes/favourites.ejs
@@ -8,12 +8,13 @@
 	<tr>
 		<td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
 		<%if (session.user) { %>
-		<td><form method="post" action="/user/<%= session.user.id %>/favourites/<%=quizes[i].id%>?_method=delete"><button>borrar fav</button></a></td>
+		<td><form method="post" action="/user/<%= session.user.id %>/favourites/<%=quizes[i].id%>?_method=delete">
+			<button type="submit" onClick="return confirm('¿Borrar &quot;<%= quizes[i].pregunta %>&quot; de favoritos?');">borrar fav</button></a></td>
 		<%if (session.user.isAdmin || session.user.id === quizes[i].UserId){ %>
 		<td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
 		<td>
 			<form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
-				<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">borrar</button>
+				<button type="submit" onClick="return confirm('¿Borrar &quot;<%= quizes[i].pregunta %>&quot;?');">borrar</button>
 			</form>
 		</td>
 	</tr>
